workspace = { members = [ "ecdsa", "rblock", "sha256"] }
[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = { path = "./sha256" }
rblock = { path = "./rblock" }
ecdsa = { path = "./ecdsa" }
tokio = { version = "1.37.0", features = ["full"] }
num-bigint = "0.4"
num-traits = "0.2"
serde_json = "1.0.115"
