workspace = { members = [ "ecdsa", "rblock", "sha256"] }
[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = { path = "./sha256" }
rblock = { path = "./rblock" }
ecdsa = { path = "./ecdsa" }
serde_json = "1.0.115"
rusty-leveldb = "3.0.0"
num-bigint = "0.4"
dirs = "5.0.1"
serde = "1.0.197"
bincode = "1.3.3"
byteorder = "1.5.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.37.0", features = ["full"] }


