[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = "0.8.5"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
sha256 = { path = "../sha256" }
